--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
     "python.jediEnabled": false,
 
     // Loaded Stubs: 
-    "python.autoComplete.extraPaths": [".micropy\\Indoor_ESP32"],
-    "python.autoComplete.typeshedPaths":  [".micropy\\Indoor_ESP32"],
-    "python.analysis.typeshedPaths":  [".micropy\\Indoor_ESP32"],
+    "python.autoComplete.extraPaths": [".micropy\\Indoor_ESP32","src/lib",".micropy/micropython-esp32-1_15" ],
+    "python.autoComplete.typeshedPaths":  [".micropy\\Indoor_ESP32","src/lib",".micropy/micropython-esp32-1_15" ],
+    "python.analysis.typeshedPaths":  [".micropy\\Indoor_ESP32","src/lib",".micropy/micropython-esp32-1_15" ],
 
     "python.linting.pylintEnabled": true,
     "python.languageServer": "Microsoft"
