--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,1 @@
-{"AP_password": "brewpiless", "AP_essid": "brewpiless", "STA_essid": "Julio", "STA_password": "Misiones145"}  
+{"AP_password": "brewpiless", "STA_essid": "Julio", "AP_essid": "brewpiless", "STA_password": "Misiones145"}
