--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,6 @@
-{"AP_password": "brewpiless", "STA_essid": "Julio", "AP_essid": "brewpiless", "STA_password": "Misiones145"}
+{
+  "AP_password": "INDOOR_ESP",
+  "STA_essid": "Julio",
+  "AP_essid": "indoor_esp",
+  "STA_password": "Misiones145"
+}
